# toy-robot-simulation

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/toy_robot_simulation/: controller.py  main.py  robot.py
tests/integration/: test_file_input_mode.py  test_interactive_mode.py
tests/unit/: test_controller.py  test_main.py  test_robot.py
