[project]
name = "toy-robot-simulation"
version = "0.1.0"

[project.scripts]
toy_robot_simulation = "toy_robot_simulation.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toy_robot_simulation"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]